interfaces connection